--- a/index.html
+++ b/index.html
@@ -8,14 +8,23 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Bdeszczynski.github.io</title>
+    <title>bdeszczynski.github.io</title>
   </head>
 
   <body>
+  <!-- HEADER -->
+	<div id="header_wrap" class="outer">
+		<header class="inner">
+		  <h1 id="project_title">bdeszczynski.github.io</h1>
+		  <h2 id="project_tagline">Teresa Wojtanka</h2>
+
+		</header>
+	</div>
+
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>Czesc Michal</p>
+        <p>Czesc Teresa</p>
       </section>
     </div>
   </body>
