--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <!-- HEADER -->
 	<div id="header_wrap" class="outer">
 		<header class="inner">
-		  <h1 id="project_title">bdeszczynski.github.io</h1>
-		  <h2 id="project_tagline">Teresa Wojtanka</h2>
+		  <h1id="project_tagline">Teresa Wojtanka</h1
 
 		</header>
 	</div>
