--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- HEADER -->
 	<div id="header_wrap" class="outer">
 		<header class="inner">
-		  <h1id="project_title">Teresa Wojtanka</h1
+		  <h1 id="project_title">Teresa Wojtanka</h1>
 
 		</header>
 	</div>
