--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div id="header_wrap" class="outer">
 		<header class="inner">
 		  <h1 id="project_title">Teresa Wojtanka</h1>
-
+		  <img src="3d33f6a.jpg" alt="some_text">
 		</header>
 	</div>
 
