--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <!-- HEADER -->
 	<div id="header_wrap" class="outer">
 		<header class="inner">
-		  <h1 id="project_title"><img src="images/3d33f6a.jpg" align="middle" alt="some_text"> Teresa Wojtanka</h1>
+		<img src="images/3d33f6a.jpg" alt="some_text"> 
+		<h1 id="project_title">Teresa Wojtanka</h1>
 		</header>
 	</div>
 
