--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <!-- HEADER -->
 	<div id="header_wrap" class="outer">
 		<header class="inner">
+		<img src="images/3d33f6a.jpg" alt="some_text"> 
 		<h1 id="project_title">Teresa Wojtanka</h1>
 		</header>
 	</div>
